--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <!--Header  -->
+   <div class="red_sec">
     <div class="intro container">
       <div class="header">
         <img src="./img/logo.svg" alt="Logo" />
@@ -29,14 +30,17 @@
         <img src="./img/intro.png" alt="Intro__pic" width="530px" />
       </div>
     </div>
+  </div>
     <!-- End of Header -->
     <!-- Section2 -->
-    <div class="container section__2">
-      <p class="section_2_item">Aenean Consectetur Porta</p>
-      <p class="section_item">
-        Nullam quis risus eget urna mollis ornare vel eu leo.
-      </p>
-      <img src="./img/sec_2.jpg" alt="" />
+    <div class="black_section">
+      <div class="container section__2">
+        <p class="section_2_item">Aenean Consectetur Porta</p>
+        <p class="section_item">
+          Nullam quis risus eget urna mollis ornare vel eu leo.
+        </p>
+        <img src="./img/sec_2.jpg" alt="" />
+      </div>
     </div>
     <!-- End of Section 2 -->
     <!-- Section 3 -->
@@ -167,25 +171,74 @@
       </h4>
       <div class="btns">
         <button class="activ"></button>
-        <button></button>
+        <button class="noactiv"></button>
       </div>
       <img src="./img/IMAGE.png" alt="" class="anons">
     </div>
     </div>
     <!-- end of Section6 -->
     <div class="container">
-      <img src="./img/IMAGE.jpg" alt="">
-      <div class="ready">
-        <h1>
-          Ready to get started?
-        </h1>
-        <button class="red_btn">
-          Download Now
-        </button>
-        <button class="white_btn">
-          Get in Touch
-        </button>
+    <img src="./img/IMAGE.jpg" alt=""  >
+    </div>
+    <div class="black__sec">
+      <div class="container">
+        <div class="ready">
+          <h1>
+            Ready to get started?
+          </h1>
+          <div class="form_btn">
+            <button class="red_btn">
+              Download Now
+            </button>
+            <button class="white_btn">
+              Get in Touch
+            </button>
+          </div>
+        </div>
       </div>
     </div>
+    <!-- Footer -->
+    <footer>
+      <div class="container form">
+        <h1>
+          Get updates from Richard
+        </h1>
+        <p>
+          New course alerts, discounts and free lessons
+        </p>
+        <form action="">
+          <input type="email" placeholder="Enter your email">
+          <button class="red_btn input_btn">
+            Subscribe
+          </button>
+        </form>
+      </div>
+      <div class="container footer">
+        <img src="./img/IMAGE.svg" alt="">
+        <ul class="contacts">
+          <li>
+            Email
+          </li>
+          <li>
+            Instagram
+          </li>
+          <li>
+            Facebook
+          </li>
+          <li>
+            Twitter
+          </li>
+          <li>
+            Image License Info
+          </li>
+          <li>
+            Powered by Webflow
+          </li>
+        </ul>
+
+      </div>
+
+    </footer>
+    <!-- END of Footer -->
   </body>
 </html>
